# seldon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/: basic.py
seldon/: __init__.py  analysis.py  model.py  state.py  viz.py
