[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seldon"
version = "0.1.0"
description = "Probabilistic financial planning"
requires-python = ">=3.10"
dependencies = [
    "numpyro>=0.15",
    "jax>=0.4",
    "jaxlib>=0.4",
    "pydantic>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ipython",
]
